@@ -1,3 +1,8 @@
+2012-11-29  Jerome Guitton  <guitton@adacore.com>
+
+	* gdb.ada/variant_record_packed_array.exp: Test expressions of the
+	form {VARIANT_TYPE}ADDRESS.
+
 2012-11-27  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* gdb.cp/member-ptr.cc (class Diamond): Add func_ptr.
